# axum-course

./: Cargo.toml  README.md  watch_app.sh  watch_tests.sh
src/: error.rs  main.rs  model.rs
src/web/: routes_login.rs
tests/: quick_dev.rs
