[package]
name = "axum-course"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {version = "1", features = ["full"]}
anyhow = "1"
axum = "0.6"
httpc-test = "0.1.9"
cargo-watch = "8.5.2"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.120"
tower-http = {version = "0.4", features = ["fs"]}
tower-cookies = "0.9"
